--- a/docker-image.yml
+++ b/docker-image.yml
@@ -8,6 +8,12 @@ name: Create and publish a Docker image
 on:
   push:
     branches: ['main']
+    
+  pull_request:
+    branches: [ main ]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 env:
   REGISTRY: ghcr.io
